# dynamicML

./: CMakeLists.txt
src/: fileio.cpp  main.cpp  matrix.cpp
src/include/: matrix.hpp
